2005-02-24  Ralf Corsepious  <ralf.corsepius@rtems.org>

	* libc/include/sys/types.h [__rtems__]: Include new
	header file machine/_types.h.
	* libc/include/machine/types.h: Ditto.
	* libc/sys/rtems/machine/_types.h: New file.

2005-02-23  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/time.h (_timezone): Change to long also for Cygwin.
	(timezone): Drop cast from definition.

2005-02-23  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/time.h [!CYGWIN](_timezone): Change to long.
	(__tzrule_type, __tzinfo_type): New types.
	(__gettzinfo): New function.
	* libc/sys/linux/include/time.h: Ditto.
	* libc/time/Makefile.am: Add gettzinfo.c.
	* libc/time/Makefile.in: Regenerated.
	* libc/time/local.h: Moved __tzrule_type to time.h.
	* libc/time/mktime.c: Call __gettzinfo to reference
	__tznorth, __tzyear, and __tzrule array.
	* libc/time/mktm_r.c: Ditto.
	* libc/time/strftime.c: Ditto.
	* libc/time/tzset_r.c: Ditto.  Also remove definition
	of __tzrule which is now in gettzinfo.c.  Change _timezone
	references to not cast to time_t.
	* libc/time/gettzinfo.c: New file.

2005-02-23  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/sys/unistd.h: Define getpeereid for Cygwin.

2005-02-22  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/sys/unistd.h: Define fdatasync also for Cygwin.

2005-02-16  Eric Blake  <ebb9@byu.net>

	* libc/time/time.tex: Improve the documentation.
	* libc/time/strftime.c: Improve the documentation.
	(iso_year_adjust): New helper function.
	(strftime): Simplify '%E' and '%O'. Change '%c' to use
	recursion. Fix '%C', '%y', and '%Y' to deal with years with more
	than 4 characters.  Combine '%d' and '%e'. Implement '%D', '%F',
	'%g', '%G', '%n', '%R', '%t', '%T', '%u', '%V', '%X', and '%z'.
	Avoid core dumps on valid inputs (maxsize == 0, or
	tim_p->tm_isdst > 1).

2005-02-08  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/pwd.h (struct passwd): Change pw_uid and pw_gid